[metadata]
name = es_query_builder
author = Santiago Saavedra
author-email = ssaavedra@openshine.com
summary = A Query Builder to build queries specially suited for ElasticSearch queries
description-file = README.rst
home-page = https://github.com/openshine/python_esqb
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[extras]
drf =
    djangorestframework

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
